--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -1,42 +1,30 @@
-
-<polymer-element name="oj-submit-page" attributes='paper_title paper_location'>
-  <template>
-    <section layout vertical class="boiler-plate">
-      <h1>Submit a Paper</h1>
-
-        <paper-shadow id=form flex center-justified vertical layout left z=1>
-          <core-a11y-keys keys="enter" on-keys-pressed="{{submit}}"></core-a11y-keys>
-
-          <div class=input layout horizontal>
-              <paper-input   flex label="arXiv identifier" value="{{paperIdentifier}}"></paper-input>
-              <paper-button  raised disabled?={{!paperValid}} on-tap={{submit}} role=button>Submit</paper-button>
-          </div>
-
-          <div id=examples>
-            <p>Please enter the id, abstract URL or PDF URL of a paper from the arXiv.</p>
-            <p>Examples:</p>
-            <ul>
-              <li>1502.00003</li>
-              <li>1401.0003</li>
-              <li>http://arxiv.org/abs/1401.0003</li>
-              <li>http://arxiv.org/pdf/1401.0003.pdf</li>
-            </ul>
-          </div>
-
-        </paper-shadow>
-
-        <paper-url-resolver       text={{paperIdentifier}}
-                                  paperId={{paperId}}
-                                  paperFullId={{paperFullId}}
-                                  paperTypedId={{paperTypedId}}
-                                  paperVersion={{paperVersion}}
-                                  paperURL={{paperURL}}
-                                  resolved={{paperValid}}>
-        </paper-url-resolver>
-
-    </section>
-
-    <style>
+  <!--
+      TODO(polyup): unable to infer path to components
+      directory. This import path is probably incomplete.
+   -->
+  <link rel="import" href="iron-flex-layout/iron-flex-layout.html">
+<dom-module id="oj-submit-page">
+  <style>
+    /* TODO(polyup): For speed, consider reworking these styles with .classes
+                     and #ids rather than [attributes].
+    */
+    [layout] {
+      @apply(--layout);
+    }
+    [layout][vertical] {
+      @apply(--layout-vertical);
+    }
+    [layout][flex] {
+      @apply(--layout-flex);
+    }
+    [layout][center-justified] {
+      @apply(--layout-center-justified);
+    }
+    [layout][horizontal] {
+      @apply(--layout-horizontal);
+    }
+  </style>
+  <style>
       section {
         height:100%;
         min-height:400px;
@@ -67,18 +55,49 @@
           list-style-type: none;
       }
     </style>
+  <template>
+    <section layout="" vertical="" class="boiler-plate">
+      <h1>Submit a Paper</h1>
+
+        <paper-material id="form" flex="" center-justified="" vertical="" layout="" left="" elevation="1">
+          <iron-a11y-keys keys="enter" on-keys-pressed="submit"></iron-a11y-keys>
+
+          <div class="input" layout="" horizontal="">
+              <paper-input flex="" label="arXiv identifier" value="{{paperIdentifier}}"></paper-input>
+              <paper-button raised="" on-tap="submit" role="button" disabled$="{{!paperValid}}">Submit</paper-button>
+          </div>
+
+          <div id="examples">
+            <p>Please enter the id, abstract URL or PDF URL of a paper from the arXiv.</p>
+            <p>Examples:</p>
+            <ul>
+              <li>1502.00003</li>
+              <li>1401.0003</li>
+              <li>http://arxiv.org/abs/1401.0003</li>
+              <li>http://arxiv.org/pdf/1401.0003.pdf</li>
+            </ul>
+          </div>
+
+        </paper-material>
+
+        <paper-url-resolver text="{{paperIdentifier}}" paperid="{{paperId}}" paperfullid="{{paperFullId}}" papertypedid="{{paperTypedId}}" paperversion="{{paperVersion}}" paperurl="{{paperURL}}" resolved="{{paperValid}}">
+        </paper-url-resolver>
+
+    </section>
 
 
   </template>
-
   <script>
     Polymer({
-
-      submit:function(){
+      is: 'oj-submit-page',
+      properties: {
+        paper_location: { notify: true },
+        paper_title: { notify: true }
+      },
+      submit: function () {
         if (this.paperValid)
-            this.fire('go', '/submit/' + this.paperTypedId);
+          this.fire('go', '/submit/' + this.paperTypedId);
       }
-
-    })
+    });
   </script>
-</polymer-element>
+</dom-module>
