--- a/app/assets/components/ui-elements/stacked-pdf-reader.html
+++ b/app/assets/components/ui-elements/stacked-pdf-reader.html
@@ -1,13 +1,5 @@
-<polymer-element name="stacked-pdf-reader" attributes='src noPages loadProgress annotations'>
-  <template>
-
-      <div id=pages>
-      <template repeat="{{ pageNo in  pageIndexArray }}">
-        <stacked-pdf-page  pageNo={{pageNo}} page={{getPage(pageNo)}} annotations={{annotations}}></stacked-pdf-page>
-      </template>
-    </div>
-
-    <style>
+<dom-module id="stacked-pdf-reader">
+  <style>
         :host {
             padding: 2px;
             height: 100%;
@@ -22,61 +14,83 @@
             margin-bottom: 20px;
         }
     </style>
+  <template>
+
+      <div id="pages">
+      <template is="dom-repeat" items="{{pageIndexArray}}" as="pageNo">
+        <stacked-pdf-page pageno="{{pageNo}}" page="{{getPage(pageNo)}}" annotations="{{annotations}}"></stacked-pdf-page>
+      </template>
+    </div>
 
   </template>
-
   <script>
     Polymer({
-      loadProgress: 0,
-      loading: false,
-      pageIndexArray: [],
-      domReady:function(){
-        this.getPDF();
-      },
-      getPDF:function(){
-        if (!this.loading) {
-          this.loading  = true;
-          this.pdf      = null;
-          PDFJS.openExternalLinksInNewWindow = true;
-          PDFJS.disableRange = true;
-
-          // var url = "/proxy?url="+ this.src;
-          var url = this.src;
-
-          PDFJS.getDocument(url, null, null, this.updateProgress.bind(this)).then(function(pdf){
-            this.pdf = pdf;
-            this.loading  = false;
-            this.numPages = this.pdf.numPages;
-            this.createPageIndexArray(this.numPages);
-          }.bind(this) );
-
+      is: 'stacked-pdf-reader',
+      properties: {
+        annotations: { notify: true },
+        loadProgress: {
+          type: Number,
+          value: 0,
+          notify: true
+        },
+        loading: {
+          type: Boolean,
+          value: false
+        },
+        noPages: { notify: true },
+        pageIndexArray: {
+          type: Array,
+          value: function () {
+            return [];
+          }
+        },
+        src: {
+          notify: true,
+          observer: 'srcChanged'
         }
       },
-      updateProgress: function(prog){
-        this.loadProgress = 100.0*prog.loaded/(1.0*prog.total)
+      getPDF: function () {
+        if (!this.loading) {
+          this.loading = true;
+          this.pdf = null;
+          PDFJS.openExternalLinksInNewWindow = true;
+          PDFJS.disableRange = true;
+          // var url = "/proxy?url="+ this.src;
+          var url = this.src;
+          PDFJS.getDocument(url, null, null, this.updateProgress.bind(this)).then(function (pdf) {
+            this.pdf = pdf;
+            this.loading = false;
+            this.numPages = this.pdf.numPages;
+            this.createPageIndexArray(this.numPages);
+          }.bind(this));
+        }
       },
-      createPageIndexArray: function(numPages){
-          var pageIndexArray = [];
-          for(var i=0; i < this.numPages; i++ ){
-            pageIndexArray[i] = i
-          }
-          this.pageIndexArray = pageIndexArray;
+      updateProgress: function (prog) {
+        this.loadProgress = 100 * prog.loaded / (1 * prog.total);
       },
-      srcChanged:      function(){
+      createPageIndexArray: function (numPages) {
+        var pageIndexArray = [];
+        for (var i = 0; i < this.numPages; i++) {
+          pageIndexArray[i] = i;
+        }
+        this.pageIndexArray = pageIndexArray;
+      },
+      srcChanged: function () {
         this.getPDF();
       },
-      getPage:function(pageNo){
-        return this.pdf.getPage(pageNo+1);
+      getPage: function (pageNo) {
+        return this.pdf.getPage(pageNo + 1);
       },
-      pageIsVisible:function(pageNo){
+      pageIsVisible: function (pageNo) {
         var docViewTop = $(window).scrollTop();
         var docViewBottom = docViewTop + $(window).height();
-
         var elemTop = $(elem).offset().top;
         var elemBottom = elemTop + $(elem).height();
-        return ((elemBottom <= docViewBottom) && (elemTop >= docViewTop));
+        return elemBottom <= docViewBottom && elemTop >= docViewTop;
+      },
+      ready: function () {
+        this.getPDF();
       }
-    })
+    });
   </script>
-
-</polymer-element>
+</dom-module>
