--- a/app/assets/components/elements/custom-icons.html
+++ b/app/assets/components/elements/custom-icons.html
@@ -1,8 +1,8 @@
-<core-iconset-svg id="custom-icons" iconSize="16">
+<iron-iconset-svg id="custom-icons" size="16">
     <svg>
         <defs>
-            <g id="selected"  ><circle cx="8" cy="8" r="7" /></g>
-            <g id="unselected"><circle cx="8" cy="8" r="2" /></g>
+            <g id="selected"><circle cx="8" cy="8" r="7"></circle></g>
+            <g id="unselected"><circle cx="8" cy="8" r="2"></circle></g>
         </defs>
     </svg>
-</core-iconset-svg>
+</iron-iconset-svg>
