--- a/app/assets/components/elements/oj-current-user.html
+++ b/app/assets/components/elements/oj-current-user.html
@@ -1,28 +1,24 @@
-<polymer-element name="oj-current-user">
+<dom-module id="oj-current-user">
   <template>
 
-    <json-get auto url='/api/user' handleAs="json"  on-core-response={{isReady}}></json-get>
+    <json-get auto="" url="/api/user" handleas="json" on-core-response="isReady"></json-get>
 
   </template>
-
   <script>
     Polymer({
-
-      isReady:function(event){
+      is: 'oj-current-user',
+      isReady: function (event) {
         var user;
-        if (event.detail.response && event.detail.response.name){
-            user = event.detail.response;
-            window.current_user = this.user;
-            this.asyncFire('user-logged-in', user);
-        }
-        else{
-            user = null;
-            this.asyncFire('user-logged-out');
+        if (event.detail.response && event.detail.response.name) {
+          user = event.detail.response;
+          window.current_user = this.user;
+          this.asyncFire('user-logged-in', user);
+        } else {
+          user = null;
+          this.asyncFire('user-logged-out');
         }
         this.asyncFire('user', user);
       }
-
-    })
+    });
   </script>
-
-</polymer-element>
+</dom-module>
