--- a/app/assets/components/subpages/oj-404-page.html
+++ b/app/assets/components/subpages/oj-404-page.html
@@ -1,22 +1,36 @@
-<polymer-element name="oj-404-page">
+  <!--
+      TODO(polyup): unable to infer path to components
+      directory. This import path is probably incomplete.
+   -->
+  <link rel="import" href="iron-flex-layout/iron-flex-layout.html">
+<dom-module id="oj-404-page">
+  <style>
+    /* TODO(polyup): For speed, consider reworking these styles with .classes
+                     and #ids rather than [attributes].
+    */
+    [layout] {
+      @apply(--layout);
+    }
+    [layout][vertical] {
+      @apply(--layout-vertical);
+    }
+  </style>
+  <style>
+    </style>
   <template>
-      <section layout vertical class="boiler-plate">
+      <section layout="" vertical="" class="boiler-plate">
           <h1>404</h1>
 
           <p>
               Oops! We could not find that page.
-              <br/>
+              <br>
               Please use the menu on the left to find what you're looking for.
           </p>
 
     </section>
 
-    <style>
-    </style>
-
   </template>
-
   <script>
-    Polymer({})
+    Polymer({ is: 'oj-404-page' });
   </script>
-</polymer-element>
+</dom-module>
