--- a/app/assets/components/subpages/oj-settings-page.html
+++ b/app/assets/components/subpages/oj-settings-page.html
@@ -1,20 +1,30 @@
-<polymer-element name="oj-settings-page" attributes='currentUser'>
-    <template>
-        <section layout vertical class="boiler-plate">
-
-            <h1>Settings</h1>
-
-            <paper-shadow id=form flex center-justified vertical layout center z="1">
-                <core-a11y-keys keys="enter" on-keys-pressed="{{submit}}"></core-a11y-keys>
-
-                <paper-input label="e-mail address" value={{email}}></paper-input>
-                <paper-button raised disabled?={{!valid}} on-tap={{submit}} role=button>Update</paper-button>
-
-            </paper-shadow>
-
-        </section>
-
-        <style>
+  <!--
+      TODO(polyup): unable to infer path to components
+      directory. This import path is probably incomplete.
+   -->
+  <link rel="import" href="iron-flex-layout/iron-flex-layout.html">
+<dom-module id="oj-settings-page">
+  <style>
+    /* TODO(polyup): For speed, consider reworking these styles with .classes
+                     and #ids rather than [attributes].
+    */
+    [layout] {
+      @apply(--layout);
+    }
+    [layout][vertical] {
+      @apply(--layout-vertical);
+    }
+    [layout][flex] {
+      @apply(--layout-flex);
+    }
+    [layout][center] {
+      @apply(--layout-center);
+    }
+    [layout][center-justified] {
+      @apply(--layout-center-justified);
+    }
+  </style>
+  <style>
             section {
                 height: 100%;
                 min-height: 400px;
@@ -30,47 +40,58 @@
             }
 
         </style>
+  <template>
+        <section layout="" vertical="" class="boiler-plate">
 
-        <json-put id=update url="/api/user" on-success={{updateSuccess}} on-error={{updateError}}></json-put>
+            <h1>Settings</h1>
+
+            <paper-material id="form" flex="" center-justified="" vertical="" layout="" center="" elevation="1">
+                <iron-a11y-keys keys="enter" on-keys-pressed="submit"></iron-a11y-keys>
+
+                <paper-input label="e-mail address" value="{{email}}"></paper-input>
+                <paper-button raised="" on-tap="submit" role="button" disabled$="{{!valid}}">Update</paper-button>
+
+            </paper-material>
+
+        </section>
+
+        <json-put id="update" url="/api/user" on-success="updateSuccess" on-error="updateError"></json-put>
 
     </template>
-
-    <script>
-        Polymer({
-
-            valid: false,
-
-            currentUserChanged: function () {
-                this.email = this.currentUser && this.currentUser.email;
-            },
-
-            emailChanged: function () {
-                this.valid = Oj.utils.EMAIL_REGEX.test(this.email || '');
-            },
-
-            submit: function () {
-                if (!this.valid)
-                    return;
-
-                this.$.update.data =  {
-                    user: {
-                        email: this.email
-                    }
-                };
-
-                this.$.update.go();
-            },
-
-            updateSuccess: function(event, detail) {
-                this.fire('notification', 'Your e-mail address has been updated');
-                $.extend(this.currentUser, detail);
-                this.fire('go-default');
-            },
-
-            updateError: function(event, detail) {
-                this.fire('notification', Oj.utils.errorMessage(detail) );
-            }
-
-        })
-    </script>
-</polymer-element>
+  <script>
+    Polymer({
+      is: 'oj-settings-page',
+      properties: {
+        currentUser: {
+          notify: true,
+          observer: 'currentUserChanged'
+        },
+        email: { observer: 'emailChanged' },
+        valid: {
+          type: Boolean,
+          value: false
+        }
+      },
+      currentUserChanged: function () {
+        this.email = this.currentUser && this.currentUser.email;
+      },
+      emailChanged: function () {
+        this.valid = Oj.utils.EMAIL_REGEX.test(this.email || '');
+      },
+      submit: function () {
+        if (!this.valid)
+          return;
+        this.set('$.update.data', { user: { email: this.email } });
+        this.$.update.go();
+      },
+      updateSuccess: function (event, detail) {
+        this.fire('notification', 'Your e-mail address has been updated');
+        $.extend(this.currentUser, detail);
+        this.fire('go-default');
+      },
+      updateError: function (event, detail) {
+        this.fire('notification', Oj.utils.errorMessage(detail));
+      }
+    });
+  </script>
+</dom-module>
