--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -1,19 +1,24 @@
-<polymer-element name="oj-toolbar" attributes="currentUser narrow">
-
-  <template>
-
-        <div tool flex layout horizontal>
-            <core-icon-button icon="menu" on-tap={{toggleDrawer}} hidden?="{{!narrow}}"></core-icon-button>
-            <span flex class=title>The Open Journal</span>
-            <core-icon id=search-icon icon=search></core-icon>
-            <input id=search is="core-input"
-                   placeholder="Search"
-                   on-keyup={{onSearchKeyUp}}
-                    >
-            <oj-user-login currentUser={{currentUser}}></oj-user-login>
-        </div>
-
-    <style>
+  <!--
+      TODO(polyup): unable to infer path to components
+      directory. This import path is probably incomplete.
+   -->
+  <link rel="import" href="iron-flex-layout/iron-flex-layout.html">
+<dom-module id="oj-toolbar">
+  <style>
+    /* TODO(polyup): For speed, consider reworking these styles with .classes
+                     and #ids rather than [attributes].
+    */
+    [layout] {
+      @apply(--layout);
+    }
+    [layout][horizontal] {
+      @apply(--layout-horizontal);
+    }
+    [layout][flex] {
+      @apply(--layout-flex);
+    }
+  </style>
+  <style>
 
       [tool] {
         height: 100%;
@@ -77,29 +82,38 @@
       }
 
     </style>
+  <template>
 
-    <oj-current-user on-user={{onUser}}></oj-current-user>
+        <div tool="" flex="" layout="" horizontal="">
+            <paper-icon-button icon="menu" on-tap="toggleDrawer" hidden$="{{!narrow}}"></paper-icon-button>
+            <span flex="" class="title">The Open Journal</span>
+            <iron-icon id="search-icon" icon="search"></iron-icon>
+            <input id="search" is="core-input" placeholder="Search" on-keyup="onSearchKeyUp">
+            <oj-user-login currentuser="{{currentUser}}"></oj-user-login>
+        </div>
+
+    <oj-current-user on-user="onUser"></oj-current-user>
 
   </template>
-
   <script>
     Polymer({
-
-      onSearchKeyUp: function(event) {
-          if (event.keyCode==13) {
-              event.preventDefault();
-              var value = this.$.search.value;
-              value = value && $.trim(value);
-              if (value)
-                this.fire('go', '/search?q=' + encodeURIComponent(value) );
-          }
+      is: 'oj-toolbar',
+      properties: {
+        currentUser: { notify: true },
+        narrow: { notify: true }
       },
-
-      toggleDrawer: function() {
-          this.fire('toggle-drawer');
+      onSearchKeyUp: function (event) {
+        if (event.keyCode == 13) {
+          event.preventDefault();
+          var value = this.$.search.value;
+          value = value && $.trim(value);
+          if (value)
+            this.fire('go', '/search?q=' + encodeURIComponent(value));
+        }
+      },
+      toggleDrawer: function () {
+        this.fire('toggle-drawer');
       }
-
     });
   </script>
-
-</polymer-element>
+</dom-module>
