--- a/app/assets/components/ui-elements/stacked-pdf-page.html
+++ b/app/assets/components/ui-elements/stacked-pdf-page.html
@@ -1,24 +1,5 @@
-<polymer-element name="stacked-pdf-page" attributes='pageNo page annotations'>
-  <template>
-
-      <template if={{loaded}}>
-          <paper-shadow z=1 on-click={{fireClick}} >
-            <canvas id=canvas></canvas>
-            <div id=textLayer></div>
-            <template if="{{ rendered && annotations}}">
-                <div id=iconlayer>
-                    <template repeat="{{a in annotations}}">
-                      <template if="{{ a.page == pageNo }}">
-                        <oj-annotation-marker annotation={{a}}
-                                   style="{{ { top:a.page_y, left:a.page_x } | styleObject }}" ></oj-annotation-marker>
-                      </template>
-                    </template>
-                </div>
-            </template>
-          </paper-shadow>
-      </template>
-
-      <style>
+<dom-module id="stacked-pdf-page">
+  <style>
           :host {
             background-color: white;
             display: block;
@@ -89,107 +70,144 @@
           }
 
     </style>
+  <template>
+
+      <template is="dom-if" if="{{loaded}}">
+          <paper-material elevation="1" on-click="fireClick">
+            <canvas id="canvas"></canvas>
+            <div id="textLayer"></div>
+            <template is="dom-if" if="{{_computeIf(annotations, rendered)}}">
+                <div id="iconlayer">
+                    <template is="dom-repeat" items="{{annotations}}" as="a">
+                      <template is="dom-if" if="{{_computeIf2(a, pageNo)}}">
+                        <oj-annotation-marker annotation="{{a}}" style$="{{_computeStyle(a)}}"></oj-annotation-marker>
+                      </template>
+                    </template>
+                </div>
+            </template>
+          </paper-material>
+      </template>
 
   </template>
-
   <script>
     Polymer({
-      loaded: false,
-      domReady: function(){
-        $(window).resize( this.adjustClientSizes.bind(this) );
-
-        this.page.then(function(pageContent){
-          this.loaded = true;
-          this.pageContent = pageContent;
-          setTimeout(function(){
-            this.render();
-          }.bind(this), 600)
-        }.bind(this));
+      is: 'stacked-pdf-page',
+      properties: {
+        annotations: {
+          notify: true,
+          observer: 'annotationsChanged'
+        },
+        loaded: {
+          type: Boolean,
+          value: false
+        },
+        page: { notify: true },
+        pageHeight: { observer: 'pageHeightChanged' },
+        pageNo: { notify: true }
       },
-      annotationsChanged: function() {
-          this.addLocationToAnnotations();
-      },
-      pageHeightChanged: function(oldValue, newValue) {
-
-          if (oldValue==0) {
-              // Do it immediately
-              this.addLocationToAnnotations();
-          } else {
-              // Add a delay since we're reizing inside a mouse drag
-              this.job('update-annotation-list-locations', this.addLocationToAnnotations, 150 );
-          }
-
-      },
-
-      fireClick:function(event) {
-          // var canvas = this.shadowRoot.getElementById("canvas");
-          // var canvasRect = canvas.getClientRects()[0];
-
-          // pdf convertToPdfPoint doesn't sem accurate
-          // var point = this.viewport.convertToPdfPoint(event.offsetX, event.offsetY);
-
-          var x  = event.offsetX || event.layerX;
-          var y  = event.offsetY || event.layerY;
-          var rx = x / this.clientWidth;
-          var ry = y / this.clientHeight;
-          var o = $(this).position();
-          this.fire("page-clicked", {page:this.pageNo, xStart:rx, yStart:ry} );
-      },
-
-      adjustClientSizes: function(event) {
-        if (this.pageNo==0)
-          this.asyncFire('pdf-client-changed', {pageNo:this.pageNo, clientHeight:this.clientHeight});
+      annotationsChanged: function () {
         this.addLocationToAnnotations();
       },
-      addLocationToAnnotations: function() {
-          if (!this.annotations)
-            return;
-
-          for (var i=0; i < this.annotations.length; i++) {
-              var a = this.annotations[i];
-              if (a.page == this.pageNo) {
-                var location = this.annotationLocation(a);
-                $.extend(a, location);
-              }
+      pageHeightChanged: function (newValue, oldValue) {
+        if (oldValue == 0) {
+          // Do it immediately
+          this.addLocationToAnnotations();
+        } else {
+          // Add a delay since we're reizing inside a mouse drag
+          this.debounce('update-annotation-list-locations', this.addLocationToAnnotations, 150);
+        }
+      },
+      fireClick: function (event) {
+        // var canvas = this.shadowRoot.getElementById("canvas");
+        // var canvasRect = canvas.getClientRects()[0];
+        // pdf convertToPdfPoint doesn't sem accurate
+        // var point = this.viewport.convertToPdfPoint(event.offsetX, event.offsetY);
+        var x = event.offsetX || event.layerX;
+        var y = event.offsetY || event.layerY;
+        var rx = x / this.clientWidth;
+        var ry = y / this.clientHeight;
+        var o = $(this).position();
+        this.fire('page-clicked', {
+          page: this.pageNo,
+          xStart: rx,
+          yStart: ry
+        });
+      },
+      adjustClientSizes: function (event) {
+        if (this.pageNo == 0)
+          this.asyncFire('pdf-client-changed', {
+            pageNo: this.pageNo,
+            clientHeight: this.clientHeight
+          });
+        this.addLocationToAnnotations();
+      },
+      addLocationToAnnotations: function () {
+        if (!this.annotations)
+          return;
+        for (var i = 0; i < this.annotations.length; i++) {
+          var a = this.annotations[i];
+          if (a.page == this.pageNo) {
+            var location = this.annotationLocation(a);
+            $.extend(a, location);
           }
+        }
       },
-      annotationLocation: function(a) {
-          return {
-              page_y: (a.yStart * this.clientHeight) + 'px',
-              page_x: (a.xStart * this.clientWidth ) + 'px'
-          };
+      annotationLocation: function (a) {
+        return {
+          page_y: a.yStart * this.clientHeight + 'px',
+          page_x: a.xStart * this.clientWidth + 'px'
+        };
       },
-      annotationClicked: function(event, detail) {
+      annotationClicked: function (event, detail) {
         event.preventDefault();
         event.stopPropagation();
         var annotation = event.target.templateInstance.model.annotation;
         annotation.open = true;
       },
-      render: function() {
+      render: function () {
         // Get the best scaling to fit the canvas
-        var scale                 = this.clientWidth / this.pageContent.getViewport(1.0).width;
-        this.viewport             = this.pageContent.getViewport(scale);
-
-        this.textLayerDiv         = this.shadowRoot.getElementById("textLayer");
-        var canvas                = this.shadowRoot.getElementById("canvas");
-        canvas.width              = this.viewport.width;
-        canvas.height             = this.viewport.height;
-
-        this.pageContent.getTextContent().then(function(textContent) {
+        var scale = this.clientWidth / this.pageContent.getViewport(1).width;
+        this.viewport = this.pageContent.getViewport(scale);
+        this.textLayerDiv = this.shadowRoot.getElementById('textLayer');
+        var canvas = this.shadowRoot.getElementById('canvas');
+        canvas.width = this.viewport.width;
+        canvas.height = this.viewport.height;
+        this.pageContent.getTextContent().then(function (textContent) {
           this.textLayer = new TextLayerBuilder(this.textLayerDiv, 0);
           this.textLayer.setTextContent(textContent);
-
           var context = canvas.getContext('2d');
-          this.pageContent.render({canvasContext: context, viewport: this.viewport,textLayer: this.textLayer}).then( function() {
-              // no-op
+          this.pageContent.render({
+            canvasContext: context,
+            viewport: this.viewport,
+            textLayer: this.textLayer
+          }).then(function () {
           }.bind(this));
-
         }.bind(this));
-
         this.adjustClientSizes();
         this.rendered = true;
+      },
+      ready: function () {
+        $(window).resize(this.adjustClientSizes.bind(this));
+        this.page.then(function (pageContent) {
+          this.loaded = true;
+          this.pageContent = pageContent;
+          setTimeout(function () {
+            this.render();
+          }.bind(this), 600);
+        }.bind(this));
+      },
+      _computeIf: function (annotations, rendered) {
+        return rendered && annotations;
+      },
+      _computeIf2: function (a, pageNo) {
+        return a.page == pageNo;
+      },
+      _computeStyle: function (a) {
+        return this.styleObject({
+          top: a.page_y,
+          left: a.page_x
+        });
       }
-
-    })
+    });
   </script>
-</polymer-element>
+</dom-module>
